# angrMCP

./: Dockerfile  pyproject.toml
