[project]
name = "angr-mcp"
version = "0.1.0"
description = "MCP server exposing angr functionality"
requires-python = ">=3.11"
dependencies = [
	"claripy",
	"angr",
	"mcp",
	"r2pipe>=1.9.6",
	"networkx>=3.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "angr_mcp",
    "angr_mcp.server",
    "angr_mcp.server.taint_engine",
    "angr_mcp.utils",
]

[tool.uv]
package = true
